--- a/Modulo_5/time_to_answer/Gemfile
+++ b/Modulo_5/time_to_answer/Gemfile
@@ -20,6 +20,7 @@ gem "jbuilder"
 # gem "redis", ">= 4.0.1"
 gem 'devise'
 gem 'rails-i18n', '~> 7.0'
+gem 'tty-spinner'
 # Use Kredis to get higher-level data types in Redis [https://github.com/rails/kredis]
 # gem "kredis"
 
